# assistant

./: .gitignore  LocalAI.env  README.md  docker-compose-dev.yml  docker-compose.yml  env-template  milvus.yaml  ruff.toml  setup.ps1  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.trunk/: trunk.yaml
agent/: .devcontainer.json  .env-template  Dockerfile  README.md  app.py  character.txt  client.py  client_gradio.py  config.py  listen.py  prompt_parser.py  pyproject.toml  requirements.txt  test_planner.py
agent/models/: agent.py  auto_agent.py  codeagent.py  generic.py  graph_guide.py  guide.py
agent/models/dspy_modules/: presto.py
agent/models/graph/: guide.py  planner.py  secarch_file.py  upload.py
agent/models/plugins/: CodeGeneration.py  CrewAI.py  GoogleDocs.py  GoogleSearch.py  ImageGeneration.py  ScrapeText.py  Tools.py  WolframAlpha.py
agent/models/tools/: apify.py  clean_markdown.py  doc_store.py  file_manager.py  frames.py  google_docs.py  llm_connect.py  memory.py  openai_uploader.py  planner.py  presto_connector.py  prompt_template.py  radio.py  web_requests.py
agent/prompts/precanned/generate_crew/: config.json  skprompt.txt
client/: .env-template  README.md  app.py  client-kv.py  client.kv  client.py  listen.py  requirements.txt  speech.py  talk.py  ws_app.py
dalai/: Dockerfile
gpt4all/: .env-template  Dockerfile  app.py  character.txt  prompt.txt  prompt_parser.py  requirements.txt
streamlit_ui/: README.md  client.py  listen.py  requirements.txt
webui/: .devcontainer.json  Dockerfile
(+13 files in other folders)
