[tool.poetry]
name = "agent"
version = "0.1.0"
description = "General purpose AI agent"
authors = ["Kevin Littlejohn <kevin@littlejohn.id.au>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apify-client = "^1.7.1"
bs4 = "^0.0.2"
certifi = "^2024.7.4"
elevenlabs = ">=1.6.1"
faiss-cpu = "^1.8.0.post1"
filetype = "^1.2.0"
frame-sdk = "^1.2.2"
google-api-python-client = "^2.142.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
gradio = ">=4.41.0"
huggingface-hub = "^0.24.6"
keychain = "^0.14.2.0"
keyring = "^25.3.0"
langchain-community = ">=0.2.11"
langchain-experimental = "^0.0.64"
langchain-openai = "^0.1.22"
langchain = ">=0.2.12"
langgraph = ">=0.1.19"
langsmith = "^0.1.104"
loguru = "^0.7.2"
markdown = "^3.7"
nest-asyncio = "^1.6.0"
numpy = "1.26.4"
openai = "^1.42.0"
opentelemetry-api = "^1.26.0"
opentelemetry-exporter-otlp = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
pyaudio = "^0.2.14"
pydantic = ">=2.8.2"
pydantic-settings = "^2.4.0"
pyhive = {extras = ["presto"], version = "^0.7.0"}
pypdf = "^4.3.1"
python-dotenv = "^1.0.1"
search-engine-parser = "^0.6.8"
semantic-kernel = "^1.8.0"
sentence-transformers = "^3.0.1"
torchaudio = "^2.4.0"
websockets = "12.0"
wolframalpha = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
